<resources>
    <string name="language">en</string>
    <string name="languagename">Language</string>
    <string name="app_name">Juggluco</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="garmin_initialization_error">"Init Garmin connect SDK failed: "</string>
    <string name="error_nfc_device_not_supported">Scanning impossible, no NFC on this device</string>
    <string name="error_nfc_disabled">NFC is disabled, you can enable it in device settings.</string>
   <string name="kerfstok_missing_title">Kerfstok is not installed on watch</string>
    <string name="kerfstok_missing_message">Kerfstok is not installed on watch. In Garmin Connect IQ store you can get it</string>
    <string name="alarm_description">Too low or too high glucose</string>
    <string name="loss_description">Juggluco has lost contact with sensor</string>
    <string name="numalarm_description">Reminder to dose, eat or exercise</string>
    <string name="notification_description">Notifies current glucose value</string>
    <string name="ongoing_description">Ongoing program</string>
    <string name="scan_permission">Permission</string>
    <string name="scanname">Scan</string>
    <string name="scansname">Scans</string>
    <string name="historyname">History</string>
    <string name="streamname">Stream</string>
    <string name="resetname">Reset</string>
    <string name="helpname">Help</string>
    <string name="searchtopast">Search to past</string>
    <string name="nobluetooth">No bluetooth</string>
    <string name="bluetoothenabled">Bluetooth Enabled</string>
    <string name="bluetoothdisabled">Bluetooth Disabled</string>
    <string name="amountsname">Amounts</string>
    <string name="notesname">Notes</string>
    <string name="notename">Note</string>
    <string name="amountshort">@string/amountsname</string>
    <string name="mealsname">Meals</string>
    <string name="closename">Close</string>
    <string name="exporthelp">Saves up to the last value displayed on the screen. The beginning is the number of specified days back in time.</string>
    <string name="detect">Detect</string>
    <string name="testip">Test IP</string>
    <string name="testlabel">Test Label</string>
    <string name="passiveonly">Passive only</string>
    <string name="activeonly">Active only</string>
    <string name="both">Both</string>
    <string name="receivefrom">Receive from</string>
    <string name="datapresentuntil">"Data present on receiver until: "</string>
    <string name="visible">Visible</string>
    <string name="password">Password</string>
    <string name="delete">Delete</string>
    <string name="specifyreceiveordata">Specify \'Receive from\' or data to send to other device</string>
    <string name="specifyip">You should specify an IP</string>
    <string name="portrange">Network ports should be between 1024 and 65535</string>
    <string name="start">Start</string>
    <string name="now">Now</string>
    <string name="dontchangeamounts">Mirror sends amounts</string>
    <string name="thishost">This host:</string>
    <string name="dozemode">Doze mode?</string>
    <string name="sync">Sync</string>
    <string name="alarms">Alarms</string>
    <string name="save">Save</string>
 <string name="addconnectionbutton">Add Connection</string>
 <string name="offtouch">Off Touch</string>
 <string name="glucosestatusbar">Glucose notification</string>
 <string name="lowglucosealarm">Low glucose alarm</string>
 <string name="numlabel">"Label: "</string>
 <string name="roundto">"Round to: "</string>
 <string name="weight">"Weight: "</string>
 <string name="ringtonename">Ringtone</string>
 <string name="highglucosealarm">High glucose alarm</string>
 <string name="valueavailablenotification">Value available notification</string>
 <string name="lossofsignalalarm">Loss of signal alarm after</string>
 <string name="cantsetminutes">"Can't set minutes to "</string>
  <string name="minutes">minutes</string>
 <string name="toolarg"> is too long</string>
 <string name="targetrange">"Target range: "</string>
 <string name="graphrange">"Graph range: "</string>
 <string name="unit">"Unit: "</string>
 <string name="glucoseaxisleft">Glucose-axis LEFT</string>
 <string name="startsapp">Scanning starts app</string>
 <string name="patchedlibrebroadcast">Patched Libre</string>
 <string name="disablecamerakey">Disable camera key</string>
 <string name="invertscreen">Rotate 180°</string>
 <string name="nfcsound">NFC sound</string>
 <string name="manuallyscale">Manually scale </string>
 <string name="time">Time</string>
 <string name="glucose">Glucose</string>
 <string name="sensorviabluetooth">Sensor via bluetooth</string>
 <string name="sensorviabluetoothon">For Alarms in non-Mirror devices \'Sensor via bluetooth\' should be turned on</string>
 <string name="setunitfirst">Set unit first</string>
 <string name="numberlabels">Number Labels</string>
 <string name="colors">Colors</string>
 <string name="remindersname">Reminders</string>
 <string name="display">Display</string>
 <string name="shutcuts">Shortcuts</string>
 <string name="advanced">Advanced</string>
 <string name="newname">New</string>
 <string name="deletelast">Delete last</string>
 <string name="meal">Meal:</string>
 <string name="ringshort">Ring</string>
 <string name="days">Days</string>
 <string name="invaliddays">\' invalid. Days should be a natural number.</string>
 <string name="summarygraph">Summary graph</string>
 <string name="forget">Forget</string>
 <string name="reenable">Reenable</string>
 <string name="failure_info">Info</string>
 <string name="last_failure">Last failure</string>
 <string name="last_success">Last success</string>
 <string name="stage">Stage</string>
 <string name="use_bluetooth">Use Bluetooth</string>
 <string name="connection">Connection</string>
 <string name="unlock_key">Handshake</string>
 <string name="glucose_value">Glucose value</string>
 <string name="info">Info</string>
 <string name="devicespecific">Set device specific setting</string>
 <string name="dozeupdate">Update in doze mode</string>
 <string name="refresh">Refresh</string>
 <string name="sendqueue">Send queue</string>
 <string name="reinit">Reinit</string>
 <string name="watchappinstalled">Watch app installed on watch</string>
 <string name="error">Error</string>
 <string name="additem">Add Item</string>
 <string name="round">"Round "</string>
 <string name="repeat">Repeat</string>
 <string name="ingredient">Ingredient: </string>
 <string name="select">Select</string>
 <string name="carbohydrate">Carbohydrate: </string>
 <string name="carbo">Carbohydrate</string>
 <string name="total">Total: </string>
 <string name="mealtotal">Meal total: </string>
 <string name="quantity">Quantity</string>
 <string name="per">" per "</string>
 <string name="specifyingredient">You need to specify ingredient</string>
 <string name="specifyhowmuch">You need to specify how much</string>
 <string name="define">Define</string>
 <string name="edit">Edit</string>
 <string name="name">Name:</string>
 <string name="carbperunit">Carbohydrates/unit:</string>
 <string name="database">Database</string>
 <string name="search">Search</string>
 <string name="trace">Trace</string>
 <string name="unknown">Unknown</string>
 <string name="showzero">Show zero</string>
 <string name="compositionof100gram">Composition of 100 gram</string>
 <string name="status">Status</string>
 <string name="config">Config</string>
 <string name="initwatchapp">Init watch app</string>
 <string name="nowatchesfound">No watches found</string>
 <string name="getkerfstok">Get watch app Kerfstok</string>
 <string name="mealname">Meal</string>
 <string name="deletequestion">Delete?</string>
 <string name="soundname">Sound</string>
 <string name="play">Play</string>
 <string name="defaultname">Default</string>
 <string name="flash">Flash</string>
 <string name="permission">Permission</string>
 <string name="shortcut">Shortcut</string>
 <string name="value">Value</string>
 <string name="nextpage">Next page</string>
 <string name="ips">IPs:</string>
 <string name="port">Port</string>
 <string name="saved">"saved"</string>
 <string name="savefailed">Save failed</string>
 <string name="notsaved">Not saved</string>
 <string name="failedbyexception">Failed (exception)</string>
 <string name="nodata">No data</string>
 <string name="addsensorenddate">Add sensor end date to calendar app</string>
 <string name="enddatesensor">"End date sensor "</string>
 <string name="open">Open</string>
 <string name="withoutsensor">Without sensor</string>
 <string name="wronglibrary">Library not functioning properly, try a different one</string>
 <string name="installedlibrary">Installed library</string>
 <string name="cantextract">Can\'t extract %s, try a different apk</string>
 <string name="connectwithsensor">Runs to connect to sensor</string>
 <string name="exchangedata">Runs to exchange data</string>
 <string name="nonewvalue">"No new value since "</string>
 <string name="lowglucose">" Low Glucose!"</string>
 <string name="highglucose">" High Glucose!"</string>
 <string name="lowglucoseshort">@string/lowglucose</string>
 <string name="highglucoseshort">@string/highglucose</string>
 <string name="sendto">Send to</string>
 <string name="resenddata">Resend data</string>
 <string name="minimum">Minimum</string>
 <string name="minuteddeactivated">Minutes deactivated:</string>
 <string name="duractionsec">Duration (sec):</string>
 <string name="duraction">Duration:</string>
 <string name="sec">sec</string>
 <string name="notentered">" not entered"</string>
 <string name="spacedand">" and "</string>
    <string name="disturb">Disturb</string>
    <string name="uselibreview">Send to Libreview</string>
    <string name="libreviewname">Libreview</string>
    <string name="sendnow">Send now</string>
    <string name="blueormirror">"Sensor via Bluetooth" should be turned on or this should be configured as a mirror</string>
    <string name="vibrationname">Vibrate</string>
    <string name="high_priority">Turbo</string>
    <string name="darkmode">Dark mode</string>
    <string name="multiply">Multiply with:</string>
    <string name="rapidinsulin">Rapid acting insulin</string>
 <string name="longinsulin">Long acting insulin</string>
    <string name="comments">Comments</string>
 <string name="dontsend">Don\'t send</string>
 <string name="sendamounts">Send amounts</string>
 <string name="resendquestion">Resend data?</string>
 <string name="resendmessage">Be careful not to send overlapping data to Libreview.</string>
 <string name="getaccountidquestion">Get Account ID from Libreview?</string>
 <string name="finish">Terminate</string>
<string name="android13">Android</string>
 <string name="streamhistory">Bluetooth History</string>
 <string name="talk">Talk</string>
 <string name="menus">Menus</string>
 <string name="system_ui">System UI</string>
 <string name="sensor">Sensor</string>
 <string name="settings">Settings</string>
 <string name="aboutname">About</string>
 <string name="export">Export</string>
 <string name="mirror">Mirror</string>
 <string name="new_amount">New Amount</string>
 <string name="list">List</string>
 <string name="statistics">Statistics</string>
 <string name="floatname">Float</string>
 <string name="last_scan">Last Scan</string>
    <string name="date">Date</string>
 <string name="day_back">Day back</string>
 <string name="day_later">Day later</string>
 <string name="week_back">Week back</string>
 <string name="week_later">Week later</string>
   <string name="alarmclock">\u23F0</string>
 <string name="watch">watch</string>
    <string name="divorcename">Unpair</string>
    <string name="releasingsensor">Releasing sensor</string>
    <string name="connecttosensor">Connecting to sensor…</string>
    <string name="clear">Clear</string>
</resources>