<?xml version="1.0" encoding="utf-8"?>
<tk.glucodata.measuredgrid xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/librenum"
    android:columnCount="4"
    android:useDefaultMargins="true"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"

        android:layout_columnSpan="2"
        android:layout_row="0"
        />


    <TextView
        android:layout_column="2"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:id="@+id/weightlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:layout_rowSpan="6"

        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rapidacting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rapidinsulin" />

        <RadioButton
            android:id="@+id/longacting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longinsulin" />

        <RadioButton
            android:id="@+id/food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbo" />

        <RadioButton
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments" />

        <RadioButton
            android:id="@+id/dont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontsend" />

    </RadioGroup>

    <EditText
        android:layout_column="2"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="1"
        android:inputType="numberDecimal" />

    <Button
        android:layout_column="0"
        android:layout_row="7"
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpname" />
    <Button
        android:layout_column="1"
        android:layout_row="7"
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
    <Button
        android:layout_column="2"
        android:layout_row="7"
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</tk.glucodata.measuredgrid>
